# obs-setup

./: .gitignore  monitor-switcher.toml  pyproject.toml  scenes  scenes.json  scenes.json.bak  spotify-template.html  spotify.html  watch-spotify
